tests/parsing/smtlib/v2.6/errors/034_match_case_bad_term_1.expected
File "tests/parsing/smtlib/v2.6/errors/034_match_case_bad_term_1.smt2", line 3, character 37-38:
3 | (define-fun f ((x t)) t (match x ((A _))))
                                         ^
Error while parsing a match case, read the reserved word '_',
      but expected a term for the case body.
